make the button blocked

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                             </div>
                             <div>
                                 <hr>
-                                <button type="button" onclick="calculateShortestPath()" class="btn btn-primary">Calculate</button>
+                                <button type="button" onclick="calculateShortestPath()" class="btn btn-primary btn-block">Calculate</button>
                             </div>
                         </div>
                     </div>
