accept letters only for text inputs

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                                     <div>
                                         <label class="form-label w-100">
                                             Starting Node
-                                            <input type="text" class="form-control text-center mt-3" id="starting_node" required>
+                                            <input type="text" class="form-control text-center mt-3" id="starting_node" onkeypress="return /[a-z]/i.test(event.key)" required>
                                         </label>
                                     </div>
                                 </div>
@@ -40,7 +40,7 @@
                                     <div>
                                         <label class="form-label w-100">
                                             End Node
-                                            <input type="text" class="form-control text-center mt-3" id="end_node" required>
+                                            <input type="text" class="form-control text-center mt-3" id="end_node" onkeypress="return /[a-z]/i.test(event.key)" required>
                                         </label>
                                     </div>  
                                 </div>
